[tool.poetry]
name = "binary"
version = "0.1.0"
description = "Python library for turning objects into ✨binary✨."
authors = ["Tom <tomgrin10@gmail.com>"]
license = "MIT"

readme = "README.md"

homepage = ""
repository = "https://github.com/tomgrin10/binary"
documentation = ""

keywords = ["binary", "serialization", "struct", "construct"]

classifiers = [
        'Development Status :: 1 - Planning',
        'Intended Audience :: Developers',
        'Topic :: Software Development :: Build Tools',
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.4"

poetry-version = "^0.1.5"

# Backwards compatibility
typing = { version = "^3.6", python = "~2.7 || ~3.4" }
enum34 = { version = "^1", python = "~2.7" }

[tool.poetry.dev-dependencies]
ipython = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
